# challengerbot

./: Cargo.toml  database.json
src/: challenges.rs  consts.rs  database.rs  main.rs  submissions.rs
