[package]
name = "challengerbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
chrono = "0.4.19"
clap = "2.33.3"
futures = "0.3.13"
serde = "1.0.125"
serde_json = "1.0.64"
serenity = "0.10.5"
time = "0.2.26"
tokio = { version = "1.4.0", features = ["full"] }
